--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_activity_registration">RegistrationActivity</string>
     <string name="title_activity_dashboard">DashboardActivity</string>
     <string name="title_activity_splash">SplashActivity</string>
+    <string name="title_activity_forget_password">ForgetPasswordActivity</string>
 </resources>
